<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Yegocio</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Ordenes</string>
    <string name="menu_gallery">Productos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Historia ventas</string>
    <string name="menu_send">Empresa</string>
    <string name="menu_cerrar_sesion">Cerrar sesion</string>
    <string name="menu_soporte">Soporte</string>


    <string name="title_activity_proceso_orden">ProcesoOrdenActivity</string>
    <string name="title_new_order">Ordenes</string>
    <string name="title_proceso">Preparando</string>
    <string name="title_ready">Listo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_proof">ProofActivity</string>


    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="transport_id" translatable="false">123</string>
    <string name="firebase_path" translatable="false">locations</string>
    <string name="firebase_email" translatable="false">test@example.com</string>
    <string name="firebase_password" translatable="false">password</string>
    <string name="title_activity_main2" tools:ignore="ExtraTranslation">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="descripcion_del_negocio">Descripcion del negocio</string>
    <string name="todo">TODO</string>
    <string name="nombre_de_la_empresa">Nombre de la empresa</string>
    <string name="ubicacion">ubicacion</string>
    <string name="horario_de_apertura">Horario de apertura</string>
    <string name="tiempo_aproximado_de_preparacion">Tiempo aproximado de preparacion</string>
    <string name="telefono">Telefono</string>
    <string name="celular">Celular</string>
    <string name="calificacion_usuario">Calificacion usuario</string>
    <string name="calificacion_del_delivery">Calificacion del delivery</string>
    <string name="message_conversacion">Inicar la conversacion.</string>
    <string name="escribir">Escribir</string>
    <string name="llamar">Llamar</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="historial">Historial</string>
    <string name="inicio">Inicio</string>
    <string name="empresa">Empresa</string>
    <string name="fragment_new_order_title_notfound">Aun no cuentas con pedidos</string>
    <string name="message_dont_pay_bill">Tiene una deuda pendiente,Porfavor cancelar para habilitar la cuenta</string>
    <string name="message_close_store">Abre tu tienda y recibe nuevos pedidos</string>
    <string name="message_confirmar_pedido">Confirmar pedido</string>
    <string name="message_cancelar_pedido">Cancelar Pedido</string>
    <string name="comentarios">Comentarios</string>
    <string name="productos">Productos</string>
    <string name="pedido_listo">Pedido listo</string>
    <string name="add_product">+ Agregar producto</string>
    <string name="change_price">Cambiar precio</string>
    <string name="precio_del_menu">Precio del menu</string>
    <string name="nombre_aplicacion">YegoO.</string>
    <string name="type_businnes">negocios</string>
    <string name="ubicacion_empresa">Ubicacion</string>


    <!-- SECTION KEY -->


    <!--CREATE AN ACCOUNT IN GOOGLECLOUD AND ADQUIRE YOUR APIKEY CREDENTIAL -->

    <string name="googlemaps_place_apikey">AIzaSyD2616cCRnG5qtSjl39FWuZOgJDCqmbtmg</string>
    <string name="googlemaps_autocomplete_apikey">AIzaSyAovb3NQYJdlU_a8SwdrWIe2cj-e2NWOmM</string>

    <!--CREATE AN ACCOUNT IN PUSHER AND ADQUIRE YOUR APIKEY CREDENTIAL -->

    <string name="pusher_cluster">us2</string>
    <string name="pusher_apikey">18c8170377c406cfcf3a</string>
    <string name="pusher_canal_reciente">canal-orden-reciente-</string>
    <string name="pusher_canal_proces">canal-orden-proces-</string>


</resources>
