<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_list_new_orders"
            android:icon="@drawable/boleto"
            android:title="@string/inicio"/>
        <item
            android:id="@+id/nav_data_empresa"
            android:icon="@drawable/tienda"
            android:title="@string/empresa" />
        <item
            android:id="@+id/nav_producto"
            android:icon="@drawable/caja"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_deuda"
            android:icon="@drawable/dinero"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_soporte"
            android:icon="@drawable/soporte"
            android:title="@string/menu_soporte" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/salida"
            android:title="@string/menu_cerrar_sesion" />



    </group>


</menu>
