<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView_empresa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/titulo">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/titulo" />

    </androidx.appcompat.widget.Toolbar>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView_empresa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <LinearLayout
            android:id="@+id/linearLayout17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="Mi empresa"
                    android:textStyle="bold"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="8dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="16dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/fragment_data_empresa_IMAGEN"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/todo" />
                </androidx.cardview.widget.CardView>




            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/titulo"
                    android:layout_marginStart="16dp"
                    android:text="Nombre" />
                <TextView
                    android:id="@+id/fragment_data_NOMBRE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    style="@style/Title" />


            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:textColor="@color/titulo"
                android:text="@string/ubicacion_empresa" />
            <TextView
                android:id="@+id/fragment_data_UBICACION"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                style="@style/Title" />
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/titulo"
                    android:text="@string/descripcion_del_negocio" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/fragment_data_empresa_DESCRIPCION"
                        android:layout_weight="1"
                        style="@style/Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/fragment_data_empresa_EDITAR_DESCRIPCION"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ic_edit" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/titulo"
                    android:text="@string/horario_de_apertura" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/fragment_data_empresa_HORARIO"
                        style="@style/Title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/fragment_data_empresa_EDITAR_HORARIO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:layout_weight="4"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_edit" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/titulo"
                    android:text="@string/tiempo_aproximado_de_preparacion" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fragment_data_empresa_TIEMPO"
                        style="@style/Title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/fragment_data_empresa_EDITAR_TIEMPO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@drawable/ic_edit" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/telefono" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:weightSum="5"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/fragment_data_empresa_TELEFONO"
                        style="@style/Title"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/fragment_data_empresa_EDITAR_TELEFONO"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:layout_weight="4"
                        app:srcCompat="@drawable/ic_edit" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/celular" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:weightSum="5"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:id="@+id/fragment_data_empresa_CELULAR"
                        style="@style/Title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/fragment_data_empresa_EDITAR_CELULAR"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/todo"
                        android:layout_weight="4"
                        app:srcCompat="@drawable/ic_edit" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>